hphp/test/slow/func-ptr-no-interop/bad-func3.php.expectf
Fatal error: Failure to resolve undefined function foo$inout() in %s/test/slow/func-ptr-no-interop/bad-func3.php on line 5
